[gd_scene load_steps=13 format=3 uid="uid://b2y57ebldpity"]

[ext_resource type="PackedScene" uid="uid://dk6ps468q2o3x" path="res://src/scenes/mines/harvestables/harvestable_base.tscn" id="1_1udyq"]
[ext_resource type="Script" uid="uid://p1bk7gu6rnic" path="res://src/scripts/endboss_harvestable.gd" id="2_31w1o"]
[ext_resource type="Shader" uid="uid://ih1u0j0dyfum" path="res://src/shader/flash_white.gdshader" id="2_hwk7d"]
[ext_resource type="Texture2D" uid="uid://dvmbkh5nfrj13" path="res://assets/visuals/procreate/tileset.png" id="2_wvb12"]
[ext_resource type="PackedScene" uid="uid://b53eugc5jl4xk" path="res://src/scenes/forge/last_level/credits.tscn" id="3_w4x5t"]
[ext_resource type="PackedScene" uid="uid://otk24p2k4751" path="res://src/scenes/background.tscn" id="3_xrcto"]
[ext_resource type="PackedScene" uid="uid://cidaurohm7uy1" path="res://src/scenes/mines/harvestables/default_colision_shapes/collider_shape.tscn" id="3_yfmhu"]
[ext_resource type="Shader" uid="uid://cebiqw3agqr6t" path="res://src/shader/background.gdshader" id="4_31w1o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xrcto"]
atlas = ExtResource("2_wvb12")
region = Rect2(200, 135, 94, 56)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yfmhu"]
resource_local_to_scene = true
shader = ExtResource("4_31w1o")
shader_parameter/spin_speed = 1.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.298039, 0.298039, 0.298039, 1)
shader_parameter/colour_2 = Color(0.964706, 0.803922, 0.14902, 1)
shader_parameter/colour_3 = Color(0.447059, 0.34902, 0.337255, 1)
shader_parameter/contrast = 2.0
shader_parameter/lighting = 0.4
shader_parameter/pixel_filter = 700.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wvb12"]
resource_local_to_scene = true
shader = ExtResource("2_hwk7d")
shader_parameter/flash = 0.0
shader_parameter/show = false

[sub_resource type="AtlasTexture" id="AtlasTexture_31w1o"]
atlas = ExtResource("2_wvb12")
region = Rect2(200, 135, 94, 56)

[node name="EndbossHarvestable" instance=ExtResource("1_1udyq")]
script = ExtResource("2_31w1o")
_credit_scene = ExtResource("3_w4x5t")
_upgrade_stats = null
_drop_base_scene = null

[node name="CollisionShapes" parent="." index="0"]
position = Vector2(-3.57628e-07, -15)
scale = Vector2(3, 3)

[node name="ClickDetectionShape" parent="CollisionShapes/ClickDetection" index="0"]
polygon = PackedVector2Array(-17.9206, 8.87843, 0, 16.7704, 17.9206, 8.87843, 17.921, 6.027, 0, -3.865, -17.921, 6.027)

[node name="SpiritDetector" type="Area2D" parent="CollisionShapes" index="3"]
collision_layer = 0
collision_mask = 4

[node name="ColliderShape" parent="CollisionShapes/SpiritDetector" index="0" instance=ExtResource("3_yfmhu")]
position = Vector2(0, 7)
scale = Vector2(0.5, 0.5)

[node name="CollisionPolygon2D" parent="CollisionShapes/MinionRange" index="0"]
visible = false
position = Vector2(0, 9)

[node name="HitParticles" parent="Visuals/HitParticlesContainer" index="0"]
initial_velocity_min = 192.0
initial_velocity_max = 224.0
scale_amount_min = 2.0
scale_amount_max = 8.0

[node name="DestroyedParticles" parent="Visuals" index="1"]
initial_velocity_min = 288.0
initial_velocity_max = 336.0

[node name="SelectedOutline" parent="Visuals" index="2"]
texture = SubResource("AtlasTexture_xrcto")

[node name="ColorRect" type="ColorRect" parent="Visuals" index="3"]
offset_left = -32.0
offset_top = -9.0
offset_right = 33.0
offset_bottom = 20.0
mouse_filter = 2
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="WellContent" parent="Visuals" index="4" instance=ExtResource("3_xrcto")]
z_index = 0
material = SubResource("ShaderMaterial_yfmhu")
offset_left = -32.0
offset_top = -9.0
offset_right = 33.0
offset_bottom = 20.0

[node name="Sprite2D" parent="Visuals" index="5"]
material = SubResource("ShaderMaterial_wvb12")
texture = SubResource("AtlasTexture_31w1o")

[connection signal="body_entered" from="CollisionShapes/SpiritDetector" to="." method="_on_spirit_detector_body_entered"]
